# CUDAwave

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  dpw.cuh  fdtd2d.cuh  fdtd2d_cpu.h  tfsf.cuh
python/: plot_benchmark.py  plot_fields.py
src/: benchmark.cu  dpw.cu  fdtd2d.cu  fdtd2d_cpu.cpp  main.cu  tfsf.cu
